--- a/backend/package.json
+++ b/backend/package.json
@@ -1,16 +1,15 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "server.js",
+  "description": "Real-time chat app backend",
+  "main": "dev-server.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node dev-server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
-  "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.1",
