--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,5 +1,20 @@
-{
-  "version": 2,
-  "builds": [{ "src": "dev-server.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "/dev-server.js" }]
+  {
+    "version": 2,
+    "builds": [
+        {
+            "src": "server.js",
+            "use": "@vercel/node",
+            "config": {
+                "includeFiles": [
+                    "dist/**"
+                ]
+            }
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "server.js"
+        }
+    ]
 }
